# geosim

./: .gitignore  README.md  goals for geosim project.txt  pyproject.toml
geosim/cli/: repl.py
geosim/climate/: climate.py
geosim/core/: history.py  world.py
geosim/geology/: geology.py
geosim/io/: store.py
geosim/planetology/: planetology.py
geosim/topography/: topography.py
geosim/viz/: viz.py
tests/: test_history.py
